Se agregó un resumen de mi CV

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
   </div>
 </nav>
 
-<h1>Angie Nohemi</h1>
-<h1>Caiza Valle</h1>
 
+<h1>Caiza Valle</h1>
+<h1>Angie Nohemi</h1>
+<h2>Soy Angie tengo 21 años y estudio la carrera Software en 4to semestre en la Universidad Técnica de Ambato</h2>
 
 </html>
